--- a/wave-effect-parallax-scrollspy.html
+++ b/wave-effect-parallax-scrollspy.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Joey | Chili's</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
@@ -23,7 +24,60 @@
    	 	<div class="section white">
     		<div class="row container">
       			<h2 id="Appetizers" class="header scrollspy">Appetizers</h2>
-        		<p class="grey-text text-darken-3 lighten-3">Text and more all about appetizers.</p>
+      			<div class="row">
+        			<div class="col s12 m7"> <!-- start wings -->
+          				<div class="card">
+            				<div class="card-image">
+              					<img src="img/wings.jpg">
+              						<span class="card-title">Signature Wings</span>
+            				</div>
+            				<div class="card-content">
+              					<p>Hand tossed in your choice of NEW Creamy Jalapeno, Buffalo, Honey-Chipotle sauce. Smoked wings available bone-in only. Served with fresh celery & dipping sauce.</p>
+            				</div>
+            				<div class="card-action">
+              				<a href="#">Order</a>
+            				</div>
+          				</div>
+        			</div> <!-- end wings -->
+        			<div class="col s12 m4">
+						<div class="card">
+              				<div class="card-image waves-effect waves-block waves-light">
+                				<img class="activator" src="http://www.chompmenus.com/original/5c839c27fda52937c7701dd3eadab50c_TD+PotatoSkins+2560.jpg">
+              				</div>
+              				<div class="card-content">
+                				<span class="card-title activator grey-text text-darken-4">Crispy Chedder Bites<i class="material-icons right">more_vert</i></span>
+                				<p><a href="#!">Order</a></p>
+              				</div>
+              				<div class="card-reveal">
+                				<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                				<p>Combine your 3 favorite appetizers.
+                  				Served with dipping sauces.
+                  					<ul>
+                    					<li>NEW Crispy Cheddar Bites</li>
+                    					<li>Fried Pickles</li>
+                    					<li>Spiced Panko Onion Rings</li>
+                    					<li>Big Mouth® Bites</li>
+                    					<li>Boneless Buffalo Wings</li>
+                    					<li>Southwestern Eggrolls</li>
+                    					<li>Original Chicken Crispers®</li>
+                   				 		<li>Boneless Honey-Chipotle Wings</li>
+                  					</ul>
+                				</p>
+             				 </div>
+            			</div>
+          			</div>
+        			<div class="col s12 m4"> <!-- start nachos -->
+            			<div class="card blue-grey darken-1">
+              				<div class="card-content white-text">
+                				<span class="card-title">Classic Nachos</span>
+                				<p>Topped with 3-cheese blend, black beans, jalapenos & our Skillet Queso. Served with house-made pico de gallo & sour cream.</p>
+              				</div>
+              				<div class="card-action">
+                				<a href="#">Order</a>
+              				</div>
+            			</div>
+          			</div><!-- end nachos -->
+      			</div>
       		</div>
  		</div>
  		<div class="parallax-container">
@@ -33,6 +87,15 @@
         	<div class="row container">
         		<h2 id="entrees" class="header scrollspy">Entrees</h2>
         		<p class="grey-text text-darken-3 lighten-3">Text and other info on all things entrees!</p>
+        	</div>
+        </div>
+        <div class="parallax-container">
+      		<div class="parallax"><img src="img/desserts.jpg"></div>
+   	 	</div>
+        <div class="section white">
+        	<div class="row container">
+        		<h2 id="desserts" class="header scrollspy">Desserts</h2>
+        		<p class="grey-text text-darken-3 lighten-3">Text and other info on all things desserts!</p>
         	</div>
         </div>
    	 </main> <!-- end main area -->
